<resources>
    <string name="app_name">StopWatchWithCoroutine</string>
    <string name="stop">중지</string>
    <string name="start">시작</string>
    <string name="split_timer">구간 기록</string>
    <string name="split">구간</string>
    <string name="resume">계속</string>
    <string name="reset">초기화</string>
    <string name="init_zero">00</string>
    <string name="whole_time">전체 시간</string>
    <string name="dot">" . "</string>
    <string name="colon">" : "</string>
    <string name="coroutine">Coroutine</string>
    <string name="channel">Channel</string>
    <string name="flow">Flow</string>
    <string name="ver_coroutine">Ver.Coroutine</string>
    <string name="ver_channel">Ver.Channel</string>
    <string name="ver_flow">Ver.Flow</string>

</resources>