<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/verTextMargin"
        android:text="@string/ver_flow"
        />

    <LinearLayout
        android:id="@+id/mainTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainTimerMarginTop"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/minuteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_zero"
            android:textSize="@dimen/mainTimerTextSize">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textSize="@dimen/mainTimerTextSize">

        </TextView>

        <TextView
            android:id="@+id/secondText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_zero"
            android:textSize="@dimen/mainTimerTextSize">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textSize="@dimen/mainTimerTextSize">

        </TextView>

        <TextView
            android:id="@+id/milliSecondText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_zero"
            android:textSize="@dimen/mainTimerTextSize">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/subTimerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/subTimerMarginTop"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/subMinuteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_zero"
            android:textColor="#80000000"
            android:textSize="@dimen/subTimerTextSize">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="#80000000"
            android:textSize="@dimen/subTimerTextSize">
        </TextView>

        <TextView
            android:id="@+id/subSecondText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_zero"
            android:textColor="#80000000"
            android:textSize="@dimen/subTimerTextSize">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textColor="#80000000"
            android:textSize="@dimen/subTimerTextSize">
        </TextView>

        <TextView
            android:id="@+id/subMilliSecondText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_zero"
            android:textColor="#80000000"
            android:textSize="@dimen/subTimerTextSize">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/indexLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/indexLayoutMarginTop"
        android:gravity="center"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTimerLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split"
            android:textColor="#80000000">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split_timer"
            android:textColor="#80000000">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whole_time"
            android:textColor="#80000000">
        </TextView>
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="@dimen/lineWidth"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="#20000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indexLayout"
        android:layout_marginTop="20dp"
        >
    </View>

    <ScrollView
        android:id="@+id/timeLabScroll"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/timeLabScrollMarginBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout"
        app:layout_constraintTop_toBottomOf="@+id/line">

        <LinearLayout
            android:id="@+id/labLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/labLayoutMarginTop"
            android:orientation="vertical">
        </LinearLayout>


    </ScrollView>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/timeLabGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids= "timeLabScroll, subTimerLayout, indexLayout, line"
        />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/buttonLayoutMarginBottom">

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/buttonMarginEnd"
            android:backgroundTint="#10000000"
            android:text="@string/split_timer"
            android:textStyle="bold"
            android:textColor="@color/black">
        </Button>

        <Button
            android:id="@+id/startBtn"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textStyle="bold"
            android:backgroundTint="@color/basic">
        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>