<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/minuteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_zero"
            android:textSize="40sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textSize="40sp">

        </TextView>

        <TextView
            android:id="@+id/secondText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_zero"
            android:textSize="40sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textSize="40sp">

        </TextView>

        <TextView
            android:id="@+id/milliSecondText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_zero"
            android:textSize="40sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tempMinuteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_zero"
            android:textColor="#80000000"
            android:textSize="25sp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="#80000000"
            android:textSize="25sp">
        </TextView>

        <TextView
            android:id="@+id/tempSecondText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_zero"
            android:textColor="#80000000"
            android:textSize="25sp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textColor="#80000000"
            android:textSize="25sp">

        </TextView>

        <TextView
            android:id="@+id/tempMilliSecondText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_zero"
            android:textColor="#80000000"
            android:textSize="25sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        android:gravity="center"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split"
            android:textColor="#80000000">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split_timer"
            android:textColor="#80000000">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whole_time"
            android:textColor="#80000000">
        </TextView>
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:background="#20000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:layout_marginTop="20dp"
        >
    </View>

    <ScrollView
        android:id="@+id/scoll1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout"
        app:layout_constraintTop_toBottomOf="@+id/line">

        <LinearLayout
            android:id="@+id/lapLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp">

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#10000000"
            android:text="@string/split_timer"
            android:textStyle="bold"
            android:textColor="@color/black">
        </Button>

        <Button
            android:id="@+id/startBtn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textStyle="bold"
            android:backgroundTint="@color/basic">
        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>